@@ -4,5 +4,5 @@ aclocal -I m4/java -I m4/extras
 # On Mac OS X, libtoolize is named glibtoolize
 libtoolize --force --automake --copy || glibtoolize --force --automake --copy
 #autoheader
-automake  --foreign --add-missing --copy
+automake  --foreign --add-missing --force-missing --copy
 autoconf 
