@@ -1,3 +1,15 @@
+2006-08-25 23:07 
+
+	* Added topic beta
+
+2006-08-25 23:06 
+
+	* Added topic alpha
+
+2006-08-25 23:02 
+
+	* Added topic alpha
+
 2006-08-25 François Déchelle
 
 	* Added topic zob
